fix: 인증 시스템 수정 및 디버깅 정보 추가

--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,8 @@ cookie:
   name: "yeonhap_test_cookie"
 
 preauthorized:
-  emails:
-    - teacher@example.com
-    - student1@example.com
-    - student2@example.com 
+  teachers:
+    - teacher
+  students:
+    - student1
+    - student2 
