feat: 계정 관리 기능 추가 및 data 디렉토리 자동 생성

--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,10 @@ credentials:
       email: student2@example.com
       name: 학생2
       password: student123
+    admin:
+      email: admin@example.com
+      name: 관리자
+      password: admin123
 
 cookie:
   expiry_days: 30
