--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,9 @@
 credentials:
   usernames:
+    admin:
+      email: admin@example.com
+      name: 관리자
+      password: admin123
     teacher:
       email: teacher@example.com
       name: 교사
@@ -12,10 +16,70 @@ credentials:
       email: student2@example.com
       name: 학생2
       password: student123
-    admin:
-      email: admin@example.com
-      name: 관리자
-      password: admin123
+    student3:
+      email: student3@example.com
+      name: 학생3
+      password: student123
+    student4:
+      email: student4@example.com
+      name: 학생4
+      password: student123
+    student5:
+      email: student5@example.com
+      name: 학생5
+      password: student123
+    student6:
+      email: student6@example.com
+      name: 학생6
+      password: student123
+    student7:
+      email: student7@example.com
+      name: 학생7
+      password: student123
+    student8:
+      email: student8@example.com
+      name: 학생8
+      password: student123
+    student9:
+      email: student9@example.com
+      name: 학생9
+      password: student123
+    student10:
+      email: student10@example.com
+      name: 학생10
+      password: student123
+    student11:
+      email: student11@example.com
+      name: 학생11
+      password: student123
+    student12:
+      email: student12@example.com
+      name: 학생12
+      password: student123
+    student13:
+      email: student13@example.com
+      name: 학생13
+      password: student123
+    student14:
+      email: student14@example.com
+      name: 학생14
+      password: student123
+    student15:
+      email: student15@example.com
+      name: 학생15
+      password: student123
+    student16:
+      email: student16@example.com
+      name: 학생16
+      password: student123
+    student17:
+      email: student17@example.com
+      name: 학생17
+      password: student123
+    student18:
+      email: student18@example.com
+      name: 학생18
+      password: student123
 
 cookie:
   expiry_days: 30
